src/app/footer/footer.component.css
/*
 *    Copyright 2017 OICR
 *
 *    Licensed under the Apache License, Version 2.0 (the "License");
 *    you may not use this file except in compliance with the License.
 *    You may obtain a copy of the License at
 *
 *        http://www.apache.org/licenses/LICENSE-2.0
 *
 *    Unless required by applicable law or agreed to in writing, software
 *    distributed under the License is distributed on an "AS IS" BASIS,
 *    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 *    See the License for the specific language governing permissions and
 *    limitations under the License.
 */

.container-fluid,
a {
  background-color: #21335b;
  color: #e8eaf6;
}

.container-fluid {
  padding-top: 20px;
}

ul {
  list-style: none;
}

li {
  line-height: 26px;
}

/* the title of each column */
.title {
  /* used for making the text semi-bold */
  text-shadow: 0 0 0#c5cae9;
  color: #c5cae9;
  text-transform: uppercase;
  padding: 10px 0;
}

.sponsor-img {
  /* auto set height */
  height: 50px;
  /* align with text */
  vertical-align: middle;
}

hr {
  border: 1px solid #e8eaf6 80%;
}

li a {
  /* gives more space for link to be clicked on */
  padding: 8px 0;
}

/* button for "copy build info" */
.mat-stroked-button {
  border: #e8eaf6 1px solid;
  margin-top: 5px;
}

/* very last row of the footer */
.bottom-footer {
  justify-content: center;
  align-items: center;
  display: flex;
}

.footer-link:link {
  text-decoration: underline;
}

.footer-link:hover {
  color: white;
}

